[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/background.jpg" type="Texture" id=1]
[ext_resource path="res://assets/background Kopie.jpg" type="Texture" id=2]
[ext_resource path="res://scenes/Ordner.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Input_field.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Ordner_rot.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Tab_Insagram.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/Tutorial.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[node name="Tutorial" type="Node"]
script = ExtResource( 8 )
__meta__ = {
"_edit_horizontal_guides_": [ -36.0 ]
}

[node name="BackgroundLeft" type="TextureRect" parent="."]
anchor_right = 0.5
anchor_bottom = 1.0
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 7

[node name="Ordner_Links_1" type="Node2D" parent="BackgroundLeft"]

[node name="Ordner" parent="BackgroundLeft/Ordner_Links_1" instance=ExtResource( 3 )]
position = Vector2( 376, 301 )
rotation = 1.5708

[node name="Tab" parent="BackgroundLeft/Ordner_Links_1" instance=ExtResource( 7 )]
visible = false
position = Vector2( 231, 322 )
rotation = 1.5708

[node name="Ordner_Links_2" type="Node2D" parent="BackgroundLeft"]

[node name="Ordner" parent="BackgroundLeft/Ordner_Links_2" instance=ExtResource( 3 )]
position = Vector2( 376, 204 )
rotation = 1.5708

[node name="Tab" parent="BackgroundLeft/Ordner_Links_2" instance=ExtResource( 7 )]
visible = false
position = Vector2( 235, 447 )
rotation = 1.5708

[node name="Ordner_Links_Rot" type="Node2D" parent="BackgroundLeft"]

[node name="Ordner" parent="BackgroundLeft/Ordner_Links_Rot" instance=ExtResource( 5 )]
position = Vector2( 373, 101 )
rotation = 1.5708

[node name="Tab" parent="BackgroundLeft/Ordner_Links_Rot" instance=ExtResource( 4 )]
visible = false
position = Vector2( 359, 15 )
rotation = 1.5708
scale = Vector2( 0.8, 0.8 )

[node name="ColorRect" type="ColorRect" parent="BackgroundLeft"]
margin_left = 410.0
margin_top = -22.0
margin_right = 532.0
margin_bottom = 540.0
color = Color( 0, 0, 0, 0 )

[node name="BackgroundRight" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
mouse_default_cursor_shape = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="Ordner_Rechts_1" type="Node2D" parent="BackgroundRight"]

[node name="Ordner" parent="BackgroundRight/Ordner_Rechts_1" instance=ExtResource( 3 )]
position = Vector2( 96, 306 )
rotation = 4.71239

[node name="Tab" parent="BackgroundRight/Ordner_Rechts_1" instance=ExtResource( 7 )]
visible = false
position = Vector2( 247, 321 )
rotation = 4.71239

[node name="Ordner_Rechts_2" type="Node2D" parent="BackgroundRight"]

[node name="Ordner" parent="BackgroundRight/Ordner_Rechts_2" instance=ExtResource( 3 )]
position = Vector2( 95, 208 )
rotation = 4.71239

[node name="Tab" parent="BackgroundRight/Ordner_Rechts_2" instance=ExtResource( 7 )]
visible = false
position = Vector2( 252, 441 )
rotation = 4.71239

[node name="Ordner_Rechts_Rot" type="Node2D" parent="BackgroundRight"]
rotation = 4.71239

[node name="Ordner" parent="BackgroundRight/Ordner_Rechts_Rot" instance=ExtResource( 5 )]
position = Vector2( -101, 97 )
rotation = 6.28319

[node name="Tab" parent="BackgroundRight/Ordner_Rechts_Rot" instance=ExtResource( 4 )]
visible = false
position = Vector2( -529, 121 )
scale = Vector2( 0.8, 0.8 )

[node name="ColorRect" type="ColorRect" parent="BackgroundRight"]
margin_left = -63.0
margin_top = -2.0
margin_right = 65.0
margin_bottom = 560.0
color = Color( 0, 0, 0, 0 )

[node name="TimeLabelLeft" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -30.0
margin_right = 20.0
margin_bottom = -16.0
rect_rotation = 90.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "00:00"
align = 1
valign = 1

[node name="TimeLabelRight" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 10.0
margin_right = 60.0
margin_bottom = 24.0
rect_rotation = 270.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "00:00"
align = 1
valign = 1

[node name="ScoreTimer" type="Timer" parent="."]

[node name="CongratulationLabelLeft" type="Label" parent="."]
margin_left = 700.0
margin_top = 420.0
margin_right = 1000.0
margin_bottom = 520.0
rect_rotation = 270.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 2 )
text = "Placeholder"
align = 1
valign = 1
uppercase = true

[node name="CongratulationLabelRight" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -150.0
margin_right = 80.0
margin_bottom = -50.0
rect_rotation = 90.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 3 )
text = "Placeholder"
align = 1
valign = 1
uppercase = true
